add executable fat jar